force-app/main/default/objects/CLIA_Durations__c/CLIA_Durations__c.object-meta.xml
<CustomObject>
    <description>Enables business hour reporting on CLI Approval object</description>
    <label>CLIA Durations</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>CLIA Duration</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CLIA Durations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>