force-app/main/default/objects/CLIA_Durations__c/fields/From__c.field-meta.xml
<CustomField>
    <fullName>From__c</fullName>
    <description>D/T of when it started in this status+ownership combination</description>
    <inlineHelpText>D/T of when it started in this status+ownership combination</inlineHelpText>
    <label>From</label>
    <type>DateTime</type>
</CustomField>