force-app/main/default/objects/CLIA_Durations__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <description>Name of the salesforce user that owns the parent. Stamped via trigger/API</description>
    <inlineHelpText>Name of the salesforce user that owned the parent</inlineHelpText>
    <label>Owner</label>
    <type>TextArea</type>
</CustomField>