force-app/main/default/objects/CLIA_Durations__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <description>The Contract Line Item Approval this record is in reference to</description>
    <inlineHelpText>The Contract Line Item Approval this record is in reference to</inlineHelpText>
    <label>Parent</label>
    <referenceTo>Contract_Line_Item_Approval__c</referenceTo>
    <relationshipLabel>CLIA Durations</relationshipLabel>
    <relationshipName>CLIA_Durations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>