force-app/main/default/objects/CLIA_Durations__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Populated via trigger/API.</description>
    <label>Status</label>
    <type>TextArea</type>
</CustomField>