force-app/main/default/objects/CLIA_Durations__c/fields/Until__c.field-meta.xml
<CustomField>
    <fullName>Until__c</fullName>
    <description>D/T this status/owner combination lasted for.</description>
    <label>Until</label>
    <type>DateTime</type>
</CustomField>